# ChangeLog for sys-apps/portage
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1024 2012/05/24 20:51:16 zmedico Exp $

*portage-2.2.0_alpha108 (24 May 2012)

  24 May 2012; Zac Medico <zmedico@gentoo.org> +portage-2.2.0_alpha108.ebuild:
  2.2.0_alpha108 version bump. This includes all of the fixes in 2.1.10.63. Bug
  #210077 tracks all bugs fixed since portage-2.1.x.

*portage-2.1.10.63 (24 May 2012)

  24 May 2012; Zac Medico <zmedico@gentoo.org> +portage-2.1.10.63.ebuild:
  2.1.10.63 version bump. This fixes bug #416431 (absolute symlink adjustment
  for $D results in broken symlinks) and bug #417253 (KeyError triggered by
  corrupt metadata cache entries). Bug #409383 tracks all bugs fixed since
  portage-2.1.10.49.

*portage-2.1.6.7_p1 (22 May 2012)

  22 May 2012; Zac Medico <zmedico@gentoo.org> +portage-2.1.6.7_p1.ebuild,
  -portage-2.1.6.13.ebuild, -portage-2.1.6.7.ebuild:
  2.1.6.7_p1 *stable* version bump, in order to provide a smoother upgrade path
  for older systems. This only fixes incompatibilites with newer python (bug
  #330937) and bash (bug #297933). Also, remove old stable versions that have
  broken upgrade paths.

  21 May 2012; Zac Medico <zmedico@gentoo.org> portage-2.1.10.49.ebuild,
  portage-2.1.6.13.ebuild, portage-2.1.6.7.ebuild, portage-2.2.0_alpha89.ebuild:
  Tweak to avoid false-positive for repoman portage.internal check wrt env-
  update.

  18 May 2012; Zac Medico <zmedico@gentoo.org> -portage-2.1.10.60.ebuild,
  -portage-2.2.0_alpha105.ebuild:
  Remove old versions.

*portage-2.2.0_alpha107 (17 May 2012)

  17 May 2012; Zac Medico <zmedico@gentoo.org> +portage-2.2.0_alpha107.ebuild,
  -portage-2.2.0_alpha106.ebuild:
  2.2.0_alpha107 version bump. This includes all of the fixes in 2.1.10.62. Bug
  #210077 tracks all bugs fixed since portage-2.1.x.

*portage-2.1.10.62 (17 May 2012)
