@@ -1,13 +1,10 @@
 AUX README.RESCUE 137 RMD160 b8d015f266501fd1f57c91899c6815de9f9d5685 SHA1 cfc8fcf81921e265f40b47644916331e0b8f18b9 SHA256 69bea0c755eab59b6b4d90838b8551744f0b0c8eeac170b1cd13a71ee83f9ac4
-DIST portage-2.2.0_alpha107.patch.bz2 76816 RMD160 a2d19376e9a41e38021d96a751fe584f22803ee2 SHA1 4b2367a152f448e25ce96775ddd16c3131eac3b9 SHA256 c4dda3a14a4bbb9bfa824fe1eef093269b51bf422a68fda5fa4773ab3e2ce5c7
 DIST portage-2.2.0_alpha108.tar.bz2 821498 RMD160 9a5beedfc71db0b88f0929d43a894ee43401e751 SHA1 da4cf6d0ce5ab5d31f344c0e378ecade9452acb2 SHA256 c5ffc4abe03696319bfd89082b5a5bbb8f427acc92a8557f29a585fc8f2b6f9a
 DIST portage-2.2.0_alpha88.tar.bz2 803852 RMD160 9c6a87c2a8de996286e74245faeaacf89fab0aea SHA1 d2f698470f0df250f51f937d78ea484d27ad0068 SHA256 75b74a87c4f4b1a13857f62aeb42522b491b06b66fe686ef4036993f55125130
 DIST portage-2.2.0_alpha89.patch.bz2 4205 RMD160 ff17958771ee571ccc45604682882356d2d54e5e SHA1 bf5ed24e13f89bcad128e8773f40ceea8bbd8ed2 SHA256 677bc5cce25723cefbdb8f147ac6fc7162d541eb0a149fbd1b96d79f4b2a07d1
-DIST portage-2.2.0_alpha94.tar.bz2 813945 RMD160 1abe94ff71b33255f260458d1b57a00755ba375b SHA1 5a7affd3e97bf8692a6b33ef55268b2d708bd1b8 SHA256 2b559d5596ad748be4587802012d1dfd817a1b7b40242be1f0145bb0e39a6b35
 DIST portage-man-pl-2.1.2.tar.bz2 53893 RMD160 46c3656b40bf4ad2530ab2b5fbc563708b86748c SHA1 c3151e0b330c589625830e54053fbc676b2c64de SHA256 960eaa7c6f3a2af44bdc665266a8e884628a562373cc477d301597ecc5ef961f
-EBUILD portage-2.2.0_alpha107.ebuild 12447 RMD160 8490f84b3c1ad1ce1abbf120d60c3d3bdac9375c SHA1 be8f4e9ca02a8b4a77d30144541148d82990165a SHA256 417145b3334da269450948f8382aa7c1141c49ced904491e51165c12507bae5c
 EBUILD portage-2.2.0_alpha108.ebuild 12448 RMD160 f3990dd802905424c58e1bf2fda184fbb9f1d91c SHA1 36a301c52c73f20f865093f4f24ac120a8ee780e SHA256 6e7cf9f6cf08076a6a354f77a4ea9b2c779a6de615bb421cd14c06a849ce4586
 EBUILD portage-2.2.0_alpha89.ebuild 15703 RMD160 f6549541c7b98ce687f63c0f35d5df3e6aedbe6b SHA1 b18d66d52cddd626991804d749a4ec1328bb3969 SHA256 dbccab460eb714b709fe77873f702d39de33c3f861d2f3f8dd8e8f5e7b6c4169
 EBUILD portage-9999.ebuild 11690 RMD160 1517b88b0b63b3b3d7cf12760ab701ae3a7f818a SHA1 6f330e055d9b683a7b99b34fb7ae5bad0d3fba04 SHA256 ed98f4911486a8738f175865d6f8e30091cd2c5bb2a5438dfa31b58abd0cafcb
-MISC ChangeLog 96127 RMD160 6801b48336acd4a74b939821f8ededdd9311e544 SHA1 18768deb1bc26a871877d6e7e2d5b852febe3a0d SHA256 7b8fd447970d3743cf20a77227cc441b25888fba093db5c0052994ff2e78dbf0
+MISC ChangeLog 96259 RMD160 745ada7c439a292eda027d69ef8eab32315bb70f SHA1 12e8627bf40e467aec1728f997aa9ee0536cb489 SHA256 0e13dad0f01d47fcc54e6f089e74feeef6949fc2354969bc6e81017b00811fb3
 MISC metadata.xml 926 RMD160 9fd2d499d8102a870e45e63ec68400d71de950c6 SHA1 83f8455f45d0baaedcbbd3fc0186cccad54af7b9 SHA256 2609962ab6a20df40f95053513e6aca76b24caee81e7b3f45de7e3c7e33eec25
